--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "art-template": "^4.13.2",
+    "body-parser": "^1.19.0",
+    "bootstrap3": "^3.3.5",
     "express": "^4.17.1",
+    "express-art-template": "^1.0.1",
+    "jquery": "^3.4.1",
     "mongoose": "^5.6.1"
   }
 }
